# beforerr

./: .envrc  .gitattributes  .gitignore  .nojekyll  Project.toml  _quarto.yml  _variables.yml  about.html  about.qmd  index.html  index.qmd  justfile  listings.json  pixi.toml  pyproject.toml  robots.txt  search.json  sitemap.xml
.windsurf/rules/: code-style.md
config/authors/: zijin.yml
courses/: index.html
courses/epss265/: README.md  hw02.html  hw02.ipynb  hw03.html  hw03.ipynb  index.html  index.qmd  project.html  project.ipynb
courses/phys231/: homework02.nb  homework03.nb  homework04.nb  index.html  phys231_hw02.html  phys231_hw02.qmd  phys231_hw03.html  phys231_hw03.nb  phys231_hw03.qmd  phys231_hw04.html  phys231_hw04.nb  phys231_hw04.qmd  phys231_hw05.html  phys231_hw06.html  phys231_hw06.qmd  phys231_hw07.html  phys231_hw08.html  phys231_hw09.html  phys231_hw09.qmd
docs/blog/: dynamo.html  dynamo.revealjs.html  index-listing.json  index.html  index.qmd
docs/blogs/: index.html
docs/courses/: index.html  index.qmd
docs/others/: 05_cv_Zijin.html  cv_Zijin.html  cv_Zijin.qmd  cv_Zijin.tex  cv_Zijin.yaml  publications.typ  publications.yaml
docs/projects/: index.html  index.qmd
docs/research/: _metadata.yml  index-listing.json  index.html  index.qmd
epss265/: hw02.html
files/: references.bib
files/bibliography/: full.bib
projects/: finesst.html  index.html  index.qmd
research/: index.html  index.qmd
site_libs/bootstrap/: bootstrap-5ee7b028effc921799f3393c358873df.min.css  bootstrap.min.css
src/astr145/: __init__.py  main.jl
(+378 files in other folders)
