[project]
name = "bpy"
version = "0.1.0"
dependencies = ["numpy", "astropy", "speasy"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
jupyter = "*"
plasmapy = "*"
great_tables = "*"

[tool.pixi.pypi-dependencies]
bpy = { path = ".", editable = true }
